# africa-payments-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .npmignore  AD_COPY.md  ARCHITECTURE.md  BUSINESS_MODEL.md  CODE_QUALITY.md  DEPLOY.md  Dockerfile  FUNDING.md  INSTALL.md  LAUNCH_CHECKLIST.md  LICENSE  MCP-SERVER.md  MEDIA_KIT.md  OPERATING_COSTS.md  PARTNERSHIPS.md  README.md  ROI_CALCULATOR.md  SECURITY.md  SECURITY_CHECKLIST.md  TECHNICAL_DECISIONS.md  TWITTER_THREAD.md  claude-desktop-config.json  config.example.json  docker-compose.yml  jest.config.js  kenyaclaw-africa-payments-mcp-0.1.0.tgz  nginx.conf  openapi.yaml  package.json  tsconfig.json
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-security.yml  ci.yml  docs.yml  release.yml  secrets.yml  security.yml
.husky/: pre-commit
deploy-buttons/: README.md
deploy-buttons/heroku/: Procfile  README.md  app.json
deploy-buttons/railway/: README.md  nixpacks.toml  railway.json
deploy-buttons/render/: README.md  render.yaml
docs/: LAUNCH.md  README.md  changelog.md  configuration.md  contributing.md  getting-started.md  index.md  package.json  webhooks.md
docs/.vitepress/: config.js
docs/api/: reference.md
docs/examples/: claude.md  cursor.md  index.md  nodejs.md  python.md
docs/providers/: airtel-money.md  celo.md  index.md  (+11 more)
examples/: claude-desktop.md  cursor.md  realtime-integration.ts  webhook-payloads.ts  webhook-test-curl.sh  webhook-test.ts
scripts/: generate-openapi.ts  install.sh
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/africa_payments_mcp/: __init__.py  client.py  config.py  exceptions.py  models.py
sdks/python/django_integration/: __init__.py  client.py  decorators.py  models.py  views.py
sdks/python/examples/: basic_usage.py
sdks/python/flask_integration/: __init__.py  client.py  decorators.py  views.py
sdks/python/tests/: test_client.py  test_models.py
serverless/: README.md
src/: cli.ts  index.ts  mcp-server.ts  playground.ts  server.ts
tests/: README.md  integration.test.ts  mcp-server.test.ts  observability.test.ts  setup.ts  tools.test.ts  webhook.test.ts
tools/: autonomous-dashboard.html  realtime-dashboard.html  webhook-server.js  webhook-tester.html
(+228 files in other folders)
